--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,5 @@ XES/三年级/语文/IMG_20200816_180738.jpg
 XES/三年级/语文/IMG_20200816_180847.jpg
 几何 Geometry/面积模型/ref/几何辅助线之手拉手模型(初三).doc
 几何 Geometry/面积模型/ref/手拉手模型专题练习(全等或相似).docx
+primary/grade3/Practice/小学数学小数练习题-2.pdf
+primary/grade3/Practice/小学数学小数练习题-1.pdf
