--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,4 @@ XES/三年级/语文/IMG_20200816_180847.jpg
 几何 Geometry/面积模型/ref/手拉手模型专题练习(全等或相似).docx
 primary/grade3/Practice/小学数学小数练习题-2.pdf
 primary/grade3/Practice/小学数学小数练习题-1.pdf
+primary/grade3/小数练习题集.doc
